--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0"
+    "styled-components": "4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
